--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">iCoders</a>
+        <a class="navbar-brand" href="/iCoderBootstrap">iCoders</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/iCoderBootstrap">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -43,13 +43,17 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
+                    <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <div class="mx-2">
+                <button class="btn btn-success" data-toggle="modal" data-target="#loginModal">Login</button>
+                <button class="btn btn-success" data-toggle="modal" data-target="#signupModal">Sign up</button>
+            </div>
         </div>
     </nav>
 
